FIX: 명령어 호출 수정