@@ -254,25 +254,8 @@ public class CommandServiceImpl implements CommandService {
     @Override
     public String getSSL(String domain){
         try {
-            // 명령어 및 옵션 배열로 설정
-            String[] command = {
-                    "/usr/bin/certbot",
-                    "certonly",
-                    "--standalone",
-                    "--dry-run",
-                    "--email",
-                    "test@test.com",
-                    "--agree-tos",
-                    "--no-eff-email",
-                    "--keep-until-expiring",
-                    "-d",
-                    domain
-            };
-
-            // ProcessBuilder를 사용하여 외부 명령 실행
-            ProcessBuilder processBuilder = new ProcessBuilder(command);
-            processBuilder.redirectErrorStream(true);
-            Process process = processBuilder.start();
+            // 명령어 실행
+            Process process = Runtime.getRuntime().exec("certbot certonly --standalone --dry-run --email test@test.com --agree-tos --no-eff-email --keep-until-expiring -d " + domain);
 
             // 외부 명령의 출력 스트림을 가져옴
             InputStream inputStream = process.getInputStream();
